# tradeset-public

./: .gitignore  README.md  pyproject.toml
src/tradeset/: __init__.py  tools.py
