[project]
name = "tradeset"
version = "0.0.3"
authors = [
  { name="Mohammad Talaei", email="mohammadstar1375@gmail.com" },
  { name="Morteza Omidi", email="Mortezaomidi24@yahoo.com" },
]
description = "Tradeset"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pandas",
  "scikit-learn",
  "numpy",
  "requests",
]



[project.urls]
Homepage = "https://tradeset.ai/"
Documents = "https://docs.tradeset.ai/"
Issues = "https://github.com/tradeset/tradeset-public/issues/"
Source = "https://github.com/tradeset/tradeset-public/"

