[project]
name = "tradeset"
version = "0.0.6"
authors = [
  { name="Mohammad Talaei", email="m.talaei.sut@gmail.com" },
  { name="Morteza Omidi", email="mortezaomidi24@yahoo.com" },
]
description = "Tradeset"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pandas",
  "scikit-learn",
  "numpy",
  "requests",
]



[project.urls]
Homepage = "https://tradeset.ai/"
Documents = "https://docs.tradeset.ai/"
Issues = "https://github.com/tradeset/tradeset-public/issues/"
Source = "https://github.com/tradeset/tradeset-public/"

